// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account form matches snapshot for existing Coinbase account 1`] = `
<div
  className="MuiGrid-container-239 MuiGrid-justify-xs-center-256"
>
  <div
    className="MuiPaper-root-336 MuiPaper-elevation2-340 MuiPaper-rounded-337 WithFormik-ImportFromInstitutionFormComponent--root-229"
  >
    <div
      className="WithFormik-ImportFromInstitutionFormComponent--formHeader-230"
    >
      <h6
        className="MuiTypography-root-363 MuiTypography-h6-380"
      >
        Import from
        Coinbase
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root-405 MuiIconButton-root-399 WithFormik-ImportFromInstitutionFormComponent--closeButton-231"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-404"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-408"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-506"
        />
      </button>
    </div>
    <hr
      className="MuiDivider-root-417"
    />
    <div
      className="MuiGrid-container-239 MuiGrid-spacing-xs-16-262 WithFormik-ImportFromInstitutionFormComponent--input-233"
    >
      <p
        className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-paragraph-391"
      >
        Your browser will connect directly to
        <strong>
          Coinbase
        </strong>
        so you're really importing your own data.
      </p>
      <div>
        <p
          className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-paragraph-391"
        >
          <a
            href="https://www.coinbase.com/settings/api"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-colorSecondary-394"
            >
              Create an API key on Coinbase (opens in a new tab)
            </span>
          </a>
        </p>
        <div
          className="MuiPaper-root-336 MuiPaper-elevation1-339 MuiPaper-rounded-337 MuiCard-root-424  DescriptionCard-card-422"
        >
          <div
            className="MuiCardContent-root-425"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-408 DescriptionCard-icon-423"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span
              className="MuiTypography-root-363 MuiTypography-caption-373"
            >
              Make sure your api key has access to
              <strong>
                all accounts
              </strong>
              and has the following permimisions:
              <ul>
                <li>
                  <strong>
                    wallet:accounts:read
                  </strong>
                </li>
                <li>
                  <strong>
                    wallet:transactions:read
                  </strong>
                </li>
              </ul>
            </span>
          </div>
        </div>
      </div>
    </div>
    <form
      className="WithFormik-ImportFromInstitutionFormComponent--form-232"
      onSubmit={[Function]}
    >
      <span
        className="WithFormik-ImportFromInstitutionFormComponent--form-232"
      >
        <div
          className="MuiFormControl-root-426 WithFormik-ImportFromInstitutionFormComponent--input-233"
        >
          <label
            className="MuiFormLabel-root-441 MuiInputLabel-root-430 MuiInputLabel-formControl-435 MuiInputLabel-animated-438"
            data-shrink={false}
          >
            API key
          </label>
          <div
            className="MuiInputBase-root-461 MuiInput-root-448 MuiInput-underline-452 MuiInputBase-formControl-462 MuiInput-formControl-449"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API key"
              className="MuiInputBase-input-471 MuiInput-input-456"
              disabled={false}
              maxLength={100}
              name="apiKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root-426 WithFormik-ImportFromInstitutionFormComponent--input-233"
        >
          <label
            className="MuiFormLabel-root-441 MuiInputLabel-root-430 MuiInputLabel-formControl-435 MuiInputLabel-animated-438"
            data-shrink={false}
          >
            API secret
          </label>
          <div
            className="MuiInputBase-root-461 MuiInput-root-448 MuiInput-underline-452 MuiInputBase-formControl-462 MuiInput-formControl-449"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API secret"
              className="MuiInputBase-input-471 MuiInput-input-456"
              disabled={false}
              maxLength={100}
              name="apiSecret"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </span>
      <hr
        className="MuiDivider-root-417"
      />
      <div
        className="WithFormik-ImportFromInstitutionFormComponent--formActions-236"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-478"
        >
          <button
            className="MuiButtonBase-root-405 MuiButton-root-480 MuiButton-text-482 MuiButton-textSecondary-484 MuiButton-flat-485 MuiButton-flatSecondary-487"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-481"
            >
              Import
            </span>
            <span
              className="MuiTouchRipple-root-506"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Account form matches snapshot for new Coinbase account 1`] = `
<div
  className="MuiGrid-container-239 MuiGrid-justify-xs-center-256"
>
  <div
    className="MuiPaper-root-336 MuiPaper-elevation2-340 MuiPaper-rounded-337 WithFormik-ImportFromInstitutionFormComponent--root-229"
  >
    <div
      className="WithFormik-ImportFromInstitutionFormComponent--formHeader-230"
    >
      <h6
        className="MuiTypography-root-363 MuiTypography-h6-380"
      >
        Import from
        Coinbase
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root-405 MuiIconButton-root-399 WithFormik-ImportFromInstitutionFormComponent--closeButton-231"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-404"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-408"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-506"
        />
      </button>
    </div>
    <hr
      className="MuiDivider-root-417"
    />
    <div
      className="MuiGrid-container-239 MuiGrid-spacing-xs-16-262 WithFormik-ImportFromInstitutionFormComponent--input-233"
    >
      <p
        className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-paragraph-391"
      >
        Your browser will connect directly to
        <strong>
          Coinbase
        </strong>
        so you're really importing your own data.
      </p>
      <div>
        <p
          className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-paragraph-391"
        >
          <a
            href="https://www.coinbase.com/settings/api"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-363 MuiTypography-caption-373 MuiTypography-colorSecondary-394"
            >
              Create an API key on Coinbase (opens in a new tab)
            </span>
          </a>
        </p>
        <div
          className="MuiPaper-root-336 MuiPaper-elevation1-339 MuiPaper-rounded-337 MuiCard-root-424  DescriptionCard-card-422"
        >
          <div
            className="MuiCardContent-root-425"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-408 DescriptionCard-icon-423"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            <span
              className="MuiTypography-root-363 MuiTypography-caption-373"
            >
              Make sure your api key has access to
              <strong>
                all accounts
              </strong>
              and has the following permimisions:
              <ul>
                <li>
                  <strong>
                    wallet:accounts:read
                  </strong>
                </li>
                <li>
                  <strong>
                    wallet:transactions:read
                  </strong>
                </li>
              </ul>
            </span>
          </div>
        </div>
      </div>
    </div>
    <form
      className="WithFormik-ImportFromInstitutionFormComponent--form-232"
      onSubmit={[Function]}
    >
      <span
        className="WithFormik-ImportFromInstitutionFormComponent--form-232"
      >
        <div
          className="MuiFormControl-root-426 WithFormik-ImportFromInstitutionFormComponent--input-233"
        >
          <label
            className="MuiFormLabel-root-441 MuiInputLabel-root-430 MuiInputLabel-formControl-435 MuiInputLabel-animated-438"
            data-shrink={false}
          >
            API key
          </label>
          <div
            className="MuiInputBase-root-461 MuiInput-root-448 MuiInput-underline-452 MuiInputBase-formControl-462 MuiInput-formControl-449"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API key"
              className="MuiInputBase-input-471 MuiInput-input-456"
              disabled={false}
              maxLength={100}
              name="apiKey"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="MuiFormControl-root-426 WithFormik-ImportFromInstitutionFormComponent--input-233"
        >
          <label
            className="MuiFormLabel-root-441 MuiInputLabel-root-430 MuiInputLabel-formControl-435 MuiInputLabel-animated-438"
            data-shrink={false}
          >
            API secret
          </label>
          <div
            className="MuiInputBase-root-461 MuiInput-root-448 MuiInput-underline-452 MuiInputBase-formControl-462 MuiInput-formControl-449"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              aria-label="API secret"
              className="MuiInputBase-input-471 MuiInput-input-456"
              disabled={false}
              maxLength={100}
              name="apiSecret"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </span>
      <hr
        className="MuiDivider-root-417"
      />
      <div
        className="WithFormik-ImportFromInstitutionFormComponent--formActions-236"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-478"
        >
          <button
            className="MuiButtonBase-root-405 MuiButton-root-480 MuiButton-text-482 MuiButton-textSecondary-484 MuiButton-flat-485 MuiButton-flatSecondary-487"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-481"
            >
              Import
            </span>
            <span
              className="MuiTouchRipple-root-506"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Account form matches snapshot for regular account 1`] = `
<div
  className="MuiGrid-container-11 MuiGrid-justify-xs-center-28"
>
  <div
    className="MuiPaper-root-108 MuiPaper-elevation2-112 MuiPaper-rounded-109 WithFormik-ImportFromInstitutionFormComponent--root-1"
  >
    <div
      className="WithFormik-ImportFromInstitutionFormComponent--formHeader-2"
    >
      <h6
        className="MuiTypography-root-135 MuiTypography-h6-152"
      >
        Import from
        TD
      </h6>
      <button
        aria-label="Close"
        className="MuiButtonBase-root-177 MuiIconButton-root-171 WithFormik-ImportFromInstitutionFormComponent--closeButton-3"
        disabled={false}
        onBlur={[Function]}
        onClick={[MockFunction]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-176"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-180"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-222"
        />
      </button>
    </div>
    <hr
      className="MuiDivider-root-189"
    />
    <div
      className="MuiGrid-container-11 MuiGrid-spacing-xs-16-34 WithFormik-ImportFromInstitutionFormComponent--input-5"
    >
      <p
        className="MuiTypography-root-135 MuiTypography-caption-145 MuiTypography-paragraph-163"
      >
        Your browser will connect directly to
        <strong>
          TD
        </strong>
        so you're really importing your own data.
      </p>
    </div>
    <form
      className="WithFormik-ImportFromInstitutionFormComponent--form-4"
      onSubmit={[Function]}
    >
      <hr
        className="MuiDivider-root-189"
      />
      <div
        className="WithFormik-ImportFromInstitutionFormComponent--formActions-8"
      >
        <div
          className="SubmitButtonWithProgress-wrapper-194"
        >
          <button
            className="MuiButtonBase-root-177 MuiButton-root-196 MuiButton-text-198 MuiButton-textSecondary-200 MuiButton-flat-201 MuiButton-flatSecondary-203"
            disabled={false}
            onBlur={[Function]}
            onContextMenu={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-197"
            >
              Import
            </span>
            <span
              className="MuiTouchRipple-root-222"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
